# led-display

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
apps/: __init__.py  base.py  clock.py  manager.py  spotify.py  stocks.py  text.py  weather.py
config/: __init__.py  config.example.yaml  defaults.py
display/: __init__.py  graphics.py  manager.py  renderer.py
display/fonts/: __init__.py  icons.py  pixel_font.py  stock_logos.py
hardware/: __init__.py  button.py
install/: install.sh  led-display.service
network/: __init__.py  captive_portal.py  manager.py  wifi.py
scripts/: install.sh
src/ledmatrix/: __init__.py  __main__.py  _display_helpers.py
src/ledmatrix/apps/: __init__.py  base.py  clock.py  scheduler.py  spotify.py  stocks.py  text.py  weather.py  wordclock.py
src/ledmatrix/core/: __init__.py  config.py  errors.py  logging.py  retry.py  threading.py
src/ledmatrix/display/: __init__.py  graphics.py  manager.py  renderer.py
src/ledmatrix/hardware/: __init__.py  button.py  mock.py
src/ledmatrix/network/: __init__.py  captive_portal.py  manager.py  wifi.py
src/ledmatrix/web/: __init__.py  app.py  auth.py  schemas.py
src/ledmatrix/web/routes/: __init__.py  api.py  apps.py  wifi.py
src/ledmatrix/web/static/css/: style.css
src/ledmatrix/web/static/js/: app.js
src/ledmatrix/web/templates/: apps.html  base.html  index.html  system.html  wifi.html
systemd/: led-display.service
web/: __init__.py  app.py
web/static/css/: style.css
web/static/js/: main.js
web/templates/: base.html  captive_portal.html  index.html  system.html  wifi.html
web/templates/apps/: config.html  index.html
