[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ledmatrix"
version = "1.0.0"
description = "IoT LED Matrix Display System for Raspberry Pi"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Tobias Rademacher" }
]
keywords = ["led", "matrix", "raspberry-pi", "iot", "display"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "httpx>=0.26.0",
    "spotipy>=2.23.0",
    "yfinance>=0.2.36",
    "itsdangerous>=2.1.0",
]

[project.optional-dependencies]
pi = [
    "RPi.GPIO>=0.7.1",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
ledmatrix = "ledmatrix.__main__:main"

[project.urls]
Homepage = "https://github.com/tobiasrademacher/led-display"

[tool.hatch.build.targets.wheel]
packages = ["src/ledmatrix"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["ledmatrix"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
